animation changed to using keyframes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
   <body>
     <div class="game__container">
-      <canvas id="canvas">
-      </canvas>
+      <div id="hero"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
