--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" type="image" href="/src/resources/images/personal-space-invaders_dodging-small-talk_LOGO.png">
+    <link
+      rel="icon"
+      type="image"
+      href="/src/resources/images/personal-space-invaders_dodging-small-talk_LOGO.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal-Space Invaders </title>
+    <title>Personal-Space Invaders</title>
   </head>
 
   <body>
     <div class="game__container">
-      <div id="hero"></div>
+      <div class="game__background">
+        <div id="hero"></div>
+        <div class="npc-12"></div>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
