npc collision box implemented

--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
   <body>
     <div class="game__container">
       <div class="game__background">
-        <div id="hero"></div>
-        <div class="npc-12"></div>
+        
+        <div class="hero__collision-box">
+          <div id="hero"></div>
+        </div>
+
+        <!-- <div class="npc__collision-box"> -->
+          <div class="npc-12"> 
+            <div class="npc__collision-box"></div>
+          </div>
+        <!-- </div> -->
+
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
