game start screens styled

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <p class="game__instructions-content">
           In this game, you play as a hooded character (in disguise) stuck at a
           work event, surrounded by colleagues who insist on engaging you in
-          tedious small talk. Your objective is simple: run across the building
+          tedious small talk. Your objective is simple: run through the building
           of the event, avoiding collisions with colleagues to prevent losing
-          lives. Use the 'up arrow' to jump over colleagues and survive to the
-          end. Can you survive the event without succumbing to boredom?
-        </p>
+          lives. <br><br></p>
+          <p class="game__instructions-content">Use the '⇧' arrow key to jump over colleagues and survive to the
+            end. Can you survive the event without succumbing to boredom?</p>
+        <div class="game__instructions-button">Continue</div>
       </div>
       <div class="game__start-screen">
         <p>READY, STEADY</p>
