game over screen and play again functionality completed

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
           work event, surrounded by colleagues who insist on engaging you in
           tedious small talk. Your objective is simple: run through the building
           of the event, avoiding collisions with colleagues to prevent losing
-          lives. <br><br></p>
-          <p class="game__instructions-content">Use the '⇧' arrow key to jump over colleagues and survive to the
-            end. Can you survive the event without succumbing to boredom?</p>
+          lives. <br /><br />
+        </p>
+        <p class="game__instructions-content">
+          Use the '⇧' arrow key to jump over colleagues and survive to the end.
+          Can you survive the event without succumbing to boredom?
+        </p>
         <div class="game__instructions-button">Continue</div>
       </div>
       <div class="game__start-screen">
@@ -31,11 +34,34 @@
         <div class="game__start-button">SURVIVE!</div>
       </div>
       <div class="game__background">
+        <div class="game__end-screen">
+          <h1 class="game__end-screen-title">GAME OVER</h1>
+          <p>
+            Looks like you'll be looking at pics of Dave's 'children' (cats) for the
+            rest of the night. <br /><br />My sincerest condolences.
+            <br /><br />No one would blame you if you tried to escape one more
+            time...
+          </p>
+          <br />
+          <div class="game__end-screen-button">Play Again</div>
+        </div>
         <div class="score-counter">Score:</div>
         <div class="game__lives-container">
-          <img class="game__lives one" src="src/resources/images/pixel-hearts-3.png" alt="pixelated heart">
-          <img class="game__lives two" src="src/resources/images/pixel-hearts-3.png" alt="pixelated heart">
-          <img class="game__lives three" src="src/resources/images/pixel-hearts-3.png" alt="pixelated heart">
+          <img
+            class="game__lives one"
+            src="src/resources/images/pixel-hearts-3.png"
+            alt="pixelated heart"
+          />
+          <img
+            class="game__lives two"
+            src="src/resources/images/pixel-hearts-3.png"
+            alt="pixelated heart"
+          />
+          <img
+            class="game__lives three"
+            src="src/resources/images/pixel-hearts-3.png"
+            alt="pixelated heart"
+          />
         </div>
         <div id="hero">
           <div class="hero__collision-box"></div>
