--- a/index.html
+++ b/index.html
@@ -49,18 +49,15 @@
           <img
             class="game__lives one"
             src="/src/resources/images/pixel-hearts-3.png"
-            alt="pixelated heart"
-          />
+            alt="pixelated heart"/>
           <img
             class="game__lives two"
             src="/src/resources/images/pixel-hearts-3.png"
-            alt="pixelated heart"
-          />
+            alt="pixelated heart"/>
           <img
             class="game__lives three"
             src="/src/resources/images/pixel-hearts-3.png"
-            alt="pixelated heart"
-          />
+            alt="pixelated heart"/>
         </div>
         <div id="hero">
           <div class="hero__collision-box"></div>
