--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link
       rel="icon"
       type="image"
-      href="/src/resources/images/personal-space-invaders_dodging-small-talk_LOGO.png"
-    />
+      href="/src/resources/images/personal-space-invaders_dodging-small-talk_LOGO.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal-Space Invaders</title>
   </head>
