--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             Looks like you'll be looking at pics of Dave's 'children' (cats) for the
             rest of the night. <br /><br />My sincerest condolences.
             <br /><br />No one would blame you if you tried to escape one more
-            time..
+            time...
           </p>
           <br />
           <div class="game__end-screen-button">Play Again</div>
