--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image"
-      href="/src/resources/images/personal-space-invaders_dodging-small-talk_LOGO.png"/>
+      href="src/resources/images/personal-space-invaders_dodging-small-talk_LOGO.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal-Space Invaders</title>
   </head>
@@ -47,15 +47,15 @@
         <div class="game__lives-container">
           <img
             class="game__lives one"
-            src="/src/resources/images/pixel-hearts-3.png"
+            src="src/resources/images/pixel-hearts-3.png"
             alt="pixelated heart"/>
           <img
             class="game__lives two"
-            src="/src/resources/images/pixel-hearts-3.png"
+            src="src/resources/images/pixel-hearts-3.png"
             alt="pixelated heart"/>
           <img
             class="game__lives three"
-            src="/src/resources/images/pixel-hearts-3.png"
+            src="src/resources/images/pixel-hearts-3.png"
             alt="pixelated heart"/>
         </div>
         <div id="hero">
@@ -67,6 +67,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
