audio added to attacks

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           lives. <br /><br />
         </p>
         <p class="game__instructions-content">
-          Use the '⇧' arrow key to jump over colleagues and survive to the end.
+          Use the '⇧' arrow key to jump over colleagues and SPACEBAR to attack.
           Can you survive the event without succumbing to boredom?
         </p>
         <div class="game__instructions-button">Continue</div>
