--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image"
-      href="/logo.png"/>
+      href="./logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal-Space Invaders</title>
   </head>
@@ -47,15 +47,15 @@
         <div class="game__lives-container">
           <img
             class="game__lives one"
-            src="/hearts.png"
+            src="./hearts.png"
             alt="pixelated heart"/>
           <img
             class="game__lives two"
-            src="/hearts.png"
+            src="./hearts.png"
             alt="pixelated heart"/>
           <img
             class="game__lives three"
-            src="/hearts.png"
+            src="./hearts.png"
             alt="pixelated heart"/>
         </div>
         <div id="hero">
