--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <script type="module" src="/src/main.ts"></script>
     <div class="game__container">
       <div class="game__instructions">
         <h1 class="game__title">Personal-Space Invaders: Dodging Small Talk</h1>
@@ -28,6 +29,7 @@
         <div class="game__instructions-button">Continue</div>
       </div>
       <div class="game__start-screen">
+        <img src="./public/game-screen.png" alt="">
         <p>READY, STEADY</p>
         <div class="game__start-button">SURVIVE!</div>
       </div>
@@ -67,6 +69,5 @@
         </div>
       </div>
     </div>
-    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
