--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="game__instructions-button">Continue</div>
       </div>
       <div class="game__start-screen">
-        <img src="/assets/game-screen-BK8vtvOW.png" alt="">
+        <img src="./assets/game-screen-BK8vtvOW.png" alt="">
         <p>READY, STEADY</p>
         <div class="game__start-button">SURVIVE!</div>
       </div>
